--- a/table.html
+++ b/table.html
@@ -27,10 +27,10 @@
             <tbody>
                 
                 <tr>
-                    <td>Ryan Bantique</td>
+                    <td>Cris Detablan</td>
                     <td>Manila, Ph</td>
-                    <td>09398966155</td>
-                    <td>ryanjaybantique@gmail.com</td>
+                    <td>09398969085</td>
+                    <td>joseCruz@gmail.com</td>
                     <td>Front End Dev</td>
                     <td>Edit</td>
                     <td>Update</td>
